--- a/templates/magazine/article/includes/article_card.html
+++ b/templates/magazine/article/includes/article_card.html
@@ -7,7 +7,7 @@
         </figure>
         <div class="article-box__tags">
             <div class="tag tag--small tag--category">
-                {% trans 'Actualité' %}
+                {% trans 'News' %}
             </div>
             {% if article.keywords %}
             <div class="tag tag--small dashed dashed--gray">
