--- a/templates/core/admin/base_site.html
+++ b/templates/core/admin/base_site.html
@@ -30,6 +30,7 @@
     window.__admin_menu_collapsed = {{ settings.ADMIN_MENU_COLLAPSED|lower }};
     window.__language_code = '{{ LANGUAGE_CODE }}';
 </script>
+
 {% if not settings.GRAPPELLI_INSTALLED %}
 <script src="{% static "mezzanine/js/"|add:settings.JQUERY_FILENAME %}"></script>
 {% endif %}
@@ -63,7 +64,7 @@ jQuery(function($) {
     {% if user.is_staff %}
         {% if not is_popup and not request.GET.pop %}
         <link rel="stylesheet" href="{% static "mezzanine/chosen/chosen.css" %}">
-        <script src="{% static "mezzanine/chosen/chosen-0.9.12.jquery.js" %}"></script>
+        <!--<script src="{% static "mezzanine/chosen/chosen-0.9.12.jquery.js" %}"></script>-->
         <script src="{% static "mezzanine/js/admin/navigation.js" %}"></script>
 
         {% endif %}
