--- a/templates/agenda/event_detail.html
+++ b/templates/agenda/event_detail.html
@@ -1,5 +1,5 @@
 {% extends "agenda/event_list.html" %}
-{% load mezzanine_tags comment_tags keyword_tags rating_tags i18n future disqus_tags event_tags featured_tags %}
+{% load mezzanine_tags comment_tags keyword_tags rating_tags i18n future disqus_tags event_tags  %}
 
 {% block meta_title %}{{ event.meta_title }}{% endblock %}
 
