--- a/templates/agenda/includes/event_metainfo.html
+++ b/templates/agenda/includes/event_metainfo.html
@@ -1,4 +1,4 @@
-{% load i18n mezzanine_tags event_tags featured_tags %}
+{% load i18n mezzanine_tags event_tags  %}
 <div class="event__meta">
     <div class="event__meta__inner">
         {{ event.start }}
