--- a/templates/agenda/includes/event_metainfo_slider.html
+++ b/templates/agenda/includes/event_metainfo_slider.html
@@ -1,4 +1,4 @@
-{% load i18n mezzanine_tags event_tags featured_tags %}
+{% load i18n mezzanine_tags event_tags  %}
 <div class="event__meta--alt">
     <div class="event__meta__inner">
         <div class="split-container">
