--- a/templates/pages/basicpage.html
+++ b/templates/pages/basicpage.html
@@ -1,5 +1,5 @@
 {% extends "pages/page.html" %}
-{% load i18n mezzanine_tags keyword_tags featured_tags pages_tags organization_tags %}
+{% load i18n mezzanine_tags keyword_tags  pages_tags organization_tags %}
 
 {% block meta_title %}{{ page.meta_title }}{% endblock %}
 
