--- a/templates/styles.html
+++ b/templates/styles.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n featured_tags %}
+{% load i18n  %}
 
 {% block meta_title %}{% trans "Styles" %}{% endblock %}
 
