--- a/templates/pages/basicpage.html
+++ b/templates/pages/basicpage.html
@@ -16,29 +16,29 @@
 {% endmetablock %}{% endblock %}
 
 {% block page_class %}
-    basicpage
+    custompage
 {% endblock %}
 
 {% block page_title %}
 
-    {% editable page.basicpage.title %}
-        <h1 class="dotted">{{ page.basicpage.title }}</h1>
+    {% editable page.custompage.title %}
+        <h1 class="dotted">{{ page.custompage.title }}</h1>
     {% endeditable %}
 
 {% endblock %}
 
 {% block page_content %}
 
-    {% if page.basicpage.sub_title %}
-        {% editable page.basicpage.sub_title %}
+    {% if page.custompage.sub_title %}
+        {% editable page.custompage.sub_title %}
             <div class="chapo">
-                {{ page.basicpage.sub_title }}
+                {{ page.custompage.sub_title }}
             </div>
         {% endeditable %}
     {% endif %}
 
-    {% editable page.basicpage.content %}
-        {{ page.basicpage.content|richtext_filters|safe }}
+    {% editable page.custompage.content %}
+        {{ page.custompage.content|richtext_filters|safe }}
     {% endeditable %}
 
     {% if page.get_ascendants|length == 1 %}
@@ -57,13 +57,13 @@
 {% endblock %}
 
 {% block page_sub_content %}
-    {% if page.basicpage.pageblock_set.all %}
+    {% if page.custompage.pageblock_set.all %}
         <div class="white-bg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
                         <hr class="mt0" />
-                        {% for pageblock in page.basicpage.pageblock_set.all %}
+                        {% for pageblock in page.custompage.pageblock_set.all %}
                             <div class="row" data-summary-content>
                                 <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg">
                                     {% if not forloop.first and pageblock.with_separator %}
