--- a/templates/home/inc/generic_card.html
+++ b/templates/home/inc/generic_card.html
@@ -1,7 +1,10 @@
+{% load organization_tags i18n %}
 <h2>{{ body.content_object.title }}<h2><br/>
 <p>{{ body.content_object.description|slice:":500" }}</p>
-{% if  body.content_object.featured_image %}
-<img src="{{ MEDIA_URL }}{{ body.content_object.featured_image }}" title="" /><br/>
-{% endif %}
+{% with body.content_object.images.all|get_type:'card' as image %}
+  {% if image %}
+    <img src="{{ MEDIA_URL }}{{ image.file }}" title="" /><br/>
+  {% endif %}
+{% endwith %}
 <a href="{{ body.content_object.get_absolute_url }}" title="{{ body.content_object.title }}">{{ body.content_object.title }}</a><br/>
 ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------<br/>
