--- a/templates/home/inc/slider.html
+++ b/templates/home/inc/slider.html
@@ -1,14 +1,17 @@
+{% load organization_tags i18n %}
 <hr/>
 <h1>Slider</h1>
 <br/>
 {% for slider in home.dynamiccontenthomeslider_set.all %}
-  {% if slider.content_object.photo_slider %}
-  <h2>{{ slider.content_object.title }}<h2><br/>
-  <img src="{{ MEDIA_URL }}{{ slider.content_object.photo_slider }}" title="{{ slider.content_object.photo_slider_credits }}" /><br/>
-  {{ slider.content_object.photo_slider_credits }}<br/>
-  <a href="{{ slider.content_object.get_absolute_url }}" title="{{ slider.content_object.title }}">{{ slider.content_object.title }}</a><br/>
-  ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------<br/>
-  {% endif %}
+  {% with slider.content_object.images.all|get_type:'slider' as image %}
+    {% if image %}
+          <h2>{{ slider.content_object.title }}<h2><br/>
+          <img src="{{ MEDIA_URL }}{{ image.file }}" title="{{ image.credits }}" /><br/>
+          {{ image.credits }}<br/>
+          <a href="{{ slider.content_object.get_absolute_url }}" title="{{ slider.content_object.title }}">{{ slider.content_object.title }}</a><br/>
+          ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------<br/>
+    {% endif %}
+  {% endwith %}
 {% endfor %}
 <br/>
 <hr/>
