--- a/templates/pages/includes/page_card.html
+++ b/templates/pages/includes/page_card.html
@@ -1,8 +1,9 @@
 {% load mezzanine_tags %}
 <a href="{{ object.get_absolute_url }}" title="{{ object.title }}" class="page-box">
     <div class="page-box__image">
-        
-        <img src="{{ MEDIA_URL }}{% thumbnail object.get_content_model.photo_card 900 400 %}" />
+      {% with slider.content_object.images.all|get_type:'card' as image %}
+        <img src="{{ MEDIA_URL }}{% thumbnail image.file 900 400 %}" />
+      {% endwith %}
     </div>
     <div class="page-box__content">
         <div>
